--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
   "scripts": {
     "start-dev": "env-cmd -f .env-dev react-scripts start",
     "start-pro": "env-cmd -f .env-pro react-scripts start",
-    "build": "react-scripts build",
+    "build-dev": "env-cmd -f .env-dev react-scripts build",
+    "build-pro": "env-cmd -f .env-pro react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
